<resources>
    <string name="app_name">Archery Sessions</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Main Fragment</string>
    <string name="second_fragment_label">New Session Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="action_new_session">New Session</string>
    <string name="action_history">History</string>
    <string name="main_fragment_label">Main</string>
    <string name="history_fragment_label">History</string>
    <string name="start_session">Start Session</string>
    <string name="new_session">New Session</string>
    <string name="end_session">End session</string>
    <string name="ends">Ends:</string>
    <string name="arrows">Arrows:</string>
    <string name="_0" translatable="false">0</string>
    <string name="add_scores_fragment_label">Add Scores</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_10" translatable="false">10</string>
    <string name="insert_scores">End scores:</string>
    <string name="session_time_label">Session Time:</string>
    <string name="session_time_val_label" translatable="false">00:00:00</string>
    <string name="id_label" translatable="false">ID:</string>
    <string name="start_date_label">Start Date:</string>
    <string name="end_date_label">End Date:</string>
    <string name="details_label">Details:</string>
    <string name="last_session_label">Last Session</string>
    <string name="submit">Submit</string>
    <string name="date">Date: </string>
    <string name="dummy" translatable="false">###</string>
    <string name="avg_arrow">Avg:</string>
    <string name="action_settings">Settings</string>
    <string name="score">Score:</string>
    <string name="session_removed">Session removed.</string>
    <string name="bow_removed">Bow removed.</string>
    <string name="total_score">Total score:</string>
    <string name="end_session_q">End Session?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="statistics">Statistics:</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="count">Count</string>
    <string name="percent">Percent:</string>
    <string name="action_statistics">Statistics</string>
    <string name="statistics_fragment_fragment_label">Statistics</string>
    <string name="settings_fragment_fragment_label">Settings</string>
    <string name="sum_arrow">Points:</string>
    <string name="add_new">Add new</string>
    <string name="remove_selected">Remove selected</string>
    <string name="your_bows">Your bows:</string>
    <string name="new_bow">New bow:</string>
    <string name="name">Name</string>
    <string name="bow_added">Bow added.</string>
    <string name="bow_already_exists">Bow with this name already exists.</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="no_bows_created">No bows created</string>
    <string name="bow">Bow</string>
    <string name="id" translatable="false">ID</string>
    <string name="description">Description</string>
    <string name="length">Length</string>
    <string name="brace_height" translatable="false">Brace Height</string>
    <string name="top_tiller" translatable="false">Top Tiller</string>
    <string name="bottom_tiller" translatable="false">Bottom Tiller</string>
    <string name="edit_selected">Edit selected</string>
    <string name="_5" translatable="false">5</string>
    <string name="action_home">Home</string>
    <string name="_4" translatable="false">4</string>
    <string name="_3" translatable="false">3</string>
    <string name="_2" translatable="false">2</string>
    <string name="_1" translatable="false">1</string>
    <string name="target">Target</string>
    <string name="distance">Distance</string>
    <string name="target_distance">Target distance</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="target_distance_added">Target distance added.</string>
    <string name="target_distance_removed">Target distance removed.</string>
    <string name="nothing_available">Nothing available</string>
</resources>