<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_scores_fragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|center_vertical"
    tools:context="ex.rr.archerysession.AddScoresFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_scores" />

        <TextView
            android:id="@+id/scoresText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp" />

        <TextView
            android:id="@+id/scoresText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/scoreButton_10"
                    style="@style/scoreButton"
                    android:text="@string/_10" />

                <Button
                    android:id="@+id/scoreButton_9"
                    style="@style/scoreButton"
                    android:text="@string/_9" />

                <Button
                    android:id="@+id/scoreButton_8"
                    style="@style/scoreButton"
                    android:text="@string/_8" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/scoreButton_7"
                    style="@style/scoreButton"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/scoreButton_6"
                    style="@style/scoreButton"
                    android:text="@string/_6" />

                <Button
                    android:id="@+id/scoreButton_5"
                    style="@style/scoreButton"
                    android:text="@string/_5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/scoreButton_4"
                    style="@style/scoreButton"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/scoreButton_3"
                    style="@style/scoreButton"
                    android:text="@string/_3" />

                <Button
                    android:id="@+id/scoreButton_2"
                    style="@style/scoreButton"
                    android:text="@string/_2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/scoreButton_1"
                    style="@style/scoreButton"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/scoreButton_0"
                    style="@style/scoreButton"
                    android:text="@string/_0" />

                <ImageButton
                    android:id="@+id/scoreButton_delete"
                    android:layout_gravity="end"
                    android:src="@android:drawable/ic_input_delete"
                    tools:ignore="InefficientWeight"
                    style="@style/scoreImageButton"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:text="@string/submit"
            style="@style/buttonActive"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>