<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_scores_fragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|center_vertical"
    tools:context="ex.rr.archerysession.ConfirmSessionFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:paddingTop="@dimen/standard_12"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_session_q" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/standard_23">

            <Button
                android:id="@+id/end_confirm"
                style="@style/buttonConfirm"
                android:text="@string/confirm" />

            <Button
                android:id="@+id/end_cancel"
                style="@style/buttonCancel"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>