<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ex.rr.archerysession.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyApplication.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MyApplication.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />


    <View
        android:id="@+id/fabBGLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTransBg"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/fabLayout1"
        android:layout_marginBottom="@dimen/fab_3rd_child_Margin_bottom"
        style="@style/fabChildContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/fabChildText"
            android:text="@string/action_new_session" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            style="@style/fabChild"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/action_new_session" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fabLayout2"
        android:layout_marginBottom="@dimen/fab_2nd_child_Margin_bottom"
        style="@style/fabChildContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/fabChildText"
            android:text="@string/action_history" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            style="@style/fabChild"
            app:srcCompat="?android:attr/actionModeFindDrawable"
            android:contentDescription="@string/action_history" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/fabLayout3"
        android:layout_marginBottom="@dimen/fab_1st_child_Margin_bottom"
        style="@style/fabChildContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/fabChildText"
            android:text="@string/action_settings" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab3"
            style="@style/fabChild"
            app:srcCompat="@android:drawable/ic_dialog_info"
            android:contentDescription="@string/action_settings" />
    </LinearLayout>


    <LinearLayout
        style="@style/fabParentContainer">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            style="@style/fabParent"
            app:srcCompat="@android:drawable/ic_dialog_dialer"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/dummy" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>